Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignObjectTextObjField.quorum
class Main
    Text t
    Object o        
    action Main
        t:SetValue("text")
        o = cast(Object, t)
        if o:Equals(t)
            output "passed"
        end
    end
end
